--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -13,7 +13,7 @@ html{
 body{
   background-color: #eef0fb;
 }
-form::-webkit-scrollbar{
+form::-webkit-scrollbar, form div::-webkit-scrollbar{
   display: none;
 }
 .line-normal{
@@ -32,6 +32,8 @@ form::-webkit-scrollbar{
 }
 .principal_image{
   background-image: url(../../assets/bg-sidebar-desktop.svg);
+  height: 80vh;
+  width: 200px;
 }
 /* this are icons of plans on steps */
 .arcade{
@@ -60,6 +62,9 @@ form::-webkit-scrollbar{
   border-radius: 12px;
   box-shadow: rgba(0, 0, 0, 0.515) 1px 1px 10px 0px ;
 }
+.main--all-container{
+  height: 80vh;
+}
 /* colors */
 
 @media (max-width:700px) {
@@ -70,5 +75,10 @@ form::-webkit-scrollbar{
   }
   .principal_image{
     background-image: url(../../assets/bg-sidebar-mobile.svg);
+    height: 200px;
+    width: 100%;
+  }
+  .main--all-container{
+    height: 100%;
   }
 }
