--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -19,6 +19,18 @@ form::-webkit-scrollbar, form div::-webkit-scrollbar{
 .line-normal{
   line-height: 2rem;
 }
+.main--all-container{
+  height: 80vh;
+  width: 70vw;
+  padding-left: 15px;
+  min-width: 700px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: white;
+  border-radius: 20px;
+}
 /* this classes styling divs or span to show images */
 .img{
   background-position: center;
@@ -32,8 +44,9 @@ form::-webkit-scrollbar, form div::-webkit-scrollbar{
 }
 .principal_image{
   background-image: url(../../assets/bg-sidebar-desktop.svg);
-  height: 80vh;
-  width: 200px;
+  height: 72vh;
+  width: 240px;
+  border-radius: 20px;
 }
 /* this are icons of plans on steps */
 .arcade{
@@ -49,42 +62,55 @@ form::-webkit-scrollbar, form div::-webkit-scrollbar{
   background-color: #bfe2fd;
 }
 .form-Container{
-  width: 80vw;
-  height: 80vh;
+  width: 60vw;
+  height: 72vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  position: absolute;
   background-color: white;
-  top: 9rem;
-  left: calc(50% - 40vw);
-  border-radius: 12px;
-  box-shadow: rgba(0, 0, 0, 0.515) 1px 1px 10px 0px ;
-}
-.main--all-container{
-  height: 80vh;
 }
 .buttons-container{
-  left:0;
-  top: 2rem ;
-  position: absolute;
+  padding-top: 40px ;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 1.5rem;
+  color: white;
 }
 
 
 @media (max-width:700px) {
   .buttons-container{
     left: calc(50% - 150px);
-    top: 2rem ;
+    top: .3rem ;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     position: absolute;
+    width: 300px;
+    height: 65px;
+    gap: 2rem;
   }
   .principal_image{
     background-image: url(../../assets/bg-sidebar-mobile.svg);
     height: 200px;
     width: 100vw;
+    min-width: 320px;
+    border-radius: 0;
   }
   .main--all-container{
     height: 100%;
+    width: 100%;
+    min-width: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: transparent;
+    padding: 0;
   }
   .form-Container{
     width: 90%;
