--- a/src/Pages/App/App.css
+++ b/src/Pages/App/App.css
@@ -69,6 +69,7 @@ form::-webkit-scrollbar, form div::-webkit-scrollbar{
   justify-content: center;
   align-items: center;
   background-color: white;
+  position: relative;
 }
 .buttons-container{
   padding-top: 40px ;
@@ -76,7 +77,6 @@ form::-webkit-scrollbar, form div::-webkit-scrollbar{
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: start;
   align-items: center;
   gap: 1.5rem;
   color: white;
